--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -47,8 +47,12 @@
 
 				<li><a href="nearby">Nearby</a></li>
 				<li><a href="browse">Browse</a></li>
-				<li><a href="/login" class="btn btn-default"><span></span>Login</a></li>
-				<li><a href="/signup" class="btn btn-default"><span></span>Signup</a></li>
+				<<% if(isLoggedIn) { %>
+					<li><a href="logout">Log Out</a></li>
+				<% } else { %>
+					<li><a href="login">Login</a></li>
+					<li><a href="signup">Sign Up</a></li>
+				<% } %>
 			</ul>
 		</ul>
 		<div class="header-add">
