--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,12 +25,9 @@
 
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
-
-
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<script src="https://kit.fontawesome.com/fe624aa763.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -50,8 +47,12 @@
 
 			<li><a href="nearby">Nearby</a></li>
 			<li><a href="browse">Browse</a></li>
-			<li><a href="/login" class="btn btn-default"><span></span>Login</a></li>
-			<li><a href="/signup" class="btn btn-default"><span></span>Signup</a></li>
+			<% if(isLoggedIn) { %>
+			<li><a href="logout">Log Out</a></li>
+			<% } else { %>
+			<li><a href="login">Login</a></li>
+			<li><a href="signup">Sign Up</a></li>
+			<% } %>
 		</ul>
 
 		<div class="header-add">
@@ -88,24 +89,51 @@
 			</div>
 		</div>
 	</section>
-	<!-- Hero section end -->
 
-	<!-- Blog section -->
-	<div class="row no-gutters block-9">
+	<!-- map section -->
+	<div class="map">
+		<div class="row no-gutters block-9">
+			<div class="mapouter">
+				<div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Boston&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0"></iframe><a
+						href="https://www.whatismyip-address.com">ip address lookup</a></div>
+				<style>
+					.mapouter {
+						position: relative;
+						text-align: center;
+						height: 500px;
+						width: 60%;
+					}
+
+					.gmap_canvas {
+						overflow: hidden;
+						background: none !important;
+						height: 500px;
+						width: 60%;
+					}
+				</style>
+			</div>
+		</div>
 		<div class="col-md-6 order-md-last d-flex">
-			<form action="#" class="bg-light p-5 contact-form">
+
+			<form class="bg-light p-5 contact-form">
 				<div class="form-group">
 					<input type="text" class="form-control" placeholder="Your location">
 				</div>
+
 				<div class="form-group">
 					<input type="text" class="form-control" placeholder="Enter location">
 				</div>
 				<div class="form-group">
-					<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+
+					<!-- <input onclick ="geoFindMe()" id="find-me" type="submit" value="Enter" class="btn btn-primary py-3 px-5">
+					<p id = "status"></p>
+					<a id = "map-link" target="_blank"></a> -->
 				</div>
-				<div class="form-group">
-					<input type="submit" value="Enter" class="btn btn-primary py-3 px-5">
-				</div>
+				<button id="showMe" class="btn center-align">
+					<i class="fas fa-map-pin"></i>
+					</i>
+					Your Location
+				</button>
 			</form>
 
 		</div>
@@ -138,20 +166,6 @@
 								<img src="img/blog/2.jpg" alt="">
 								<div class="post-date">April 1,2019</div>
 								<h4>The best games of 2019</h4>
-								<div class="post-metas">
-									<div class="post-meta">By Admin</div>
-									<div class="post-meta">in <a href="#">Games</a></div>
-									<div class="post-meta">3 Comments</div>
-								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipi-scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum susp-endisse ultrices gravida. Risus commodo.</p>
-								<a href="#" class="read-more">Read More</a>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="blog-post">
-								<img src="img/blog/3.jpg" alt="">
-								<div class="post-date">April 1,2019</div>
-								<h4>Tips to play a better game</h4>
 								<div class="post-metas">
 									<div class="post-meta">By Admin</div>
 									<div class="post-meta">in <a href="#">Games</a></div>
@@ -288,35 +302,6 @@
 						</ul>
 					</div>
 				</div>
-				<!-- <div class="col-lg-3 col-sm-6">
-					<div class="footer-widget fw-latest-post">
-						<h2 class="fw-title">Usfull Links</h2>
-						<div class="latest-news-widget">
-							<div class="ln-item">
-								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
-									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
-									</div>
-								</div>
-							</div>
-							<div class="ln-item">
-								<div class="ln-text">
-									<div class="ln-date">April 1, 2019</div>
-									<h6>10 Amazing new games</h6>
-									<div class="ln-metas">
-										<div class="ln-meta">By Admin</div>
-										<div class="ln-meta">in <a href="#">Games</a></div>
-										<div class="ln-meta">3 Comments</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div> -->
 			</div>
 			<div class="copyright"><a href="">
 					<p>
@@ -335,8 +320,6 @@
 					<!-- <a href="#"><i class="fa fa-pinterest"></i><span>pinterest</span></a> -->
 					<a href="#"><i class="fa fa-facebook"></i><span>facebook</span></a>
 					<a href="#"><i class="fa fa-twitter"></i><span>twitter</span></a>
-					<!-- <a href="#"><i class="fa fa-youtube"></i><span>youtube</span></a>
-					<a href="#"><i class="fa fa-tumblr-square"></i><span>tumblr</span></a> -->
 				</div>
 			</div>
 		</div>
@@ -351,7 +334,8 @@
 	<script src="../js/circle-progress.min.js"></script>
 	<script src="../js/jquery.magnific-popup.min.js"></script>
 	<script src="../js/main.js"></script>
-
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdQZD8XwbxVf2U583hH-TioS5kD9M7bY0&callback=initMap" async defer></script>
+	<script scr="../js/map.js"></script>
 </body>
 
 </html>
