--- a/views/orangeline.ejs
+++ b/views/orangeline.ejs
@@ -49,6 +49,12 @@
 			<li><a href="favorites">Favorites</a></li>
 			<li><a href="game">Nearby</a></li>
 			<li><a href="browse">Browse</a></li>
+			<% if(isLoggedIn) { %>
+			<li><a href="logout">Log Out</a></li>
+			<% } else { %>
+			<li><a href="login">Login</a></li>
+			<li><a href="signup">Sign Up</a></li>
+			<% } %>
 		</ul>
 		<div class="header-add">
 			<img src="img/author-thumbs/train.png" width="55%" alt="">
